Adding Link to Site Logo

--- a/about.css
+++ b/about.css
@@ -44,7 +44,7 @@ hr {
   flex: 1;
 }
 
-#site-logo img {
+#logo {
   width: 135px;
   position: relative;
   top: 3px;
@@ -509,7 +509,7 @@ hr {
 
 @media(max-width: 1024px) {
   /* Header Style */
-  #site-logo img {
+  #logo {
     width: 120px;
   }
 
@@ -550,7 +550,7 @@ hr {
     padding: 0 18px;
   }
 
-  #site-logo img {
+  #logo {
     width: 135px;
   }
 
